--- a/_sass/html.scss
+++ b/_sass/html.scss
@@ -27,8 +27,8 @@ nav.icons {
     align-items: center;
 
     a {
-        margin: 0 .5em 0 0;
-        padding: .5em 1em;
+        margin: 0;
+        padding: .5em 0;
         text-decoration: none;
         display: flex;
         align-items: center;
